# Balansis

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: benchmarks.yml  release.yml
balansis/: __init__.py  arrow_integration.py  numpy_integration.py  pandas_ext.py  vectorized.py
balansis/algebra/: __init__.py  absolute_group.py  eternity_field.py  group.py
balansis/core/: __init__.py  absolute.py  eternity.py  operations.py
balansis/finance/: __init__.py  ledger.py
balansis/linalg/: __init__.py  gemm.py  qr.py  svd.py
balansis/logic/: __init__.py  compensator.py
balansis/memory/: __init__.py  arena.py
balansis/ml/: __init__.py  optimizer.py
balansis/native/: __init__.py
balansis/sets/: __init__.py  eternal_set.py  generators.py  resolver.py
balansis/utils/: __init__.py  plot.py  safe.py
benchmarks/: __init__.py  accuracy_benchmarks.py  baselines.json  linalg_benchmarks.py  ml_benchmarks.py  regression_tracker.py
docs/: ACT_SPECIFICATION_v1.md  ACT_WHITEPAPER_v1.md  FORMAL_VERIFICATION.md  PATENT_DRAFT_ACT.md  PROJECT_ANALYSIS.md
formal/: BalansisFormal.lean  README.md  act.lean  lake-manifest.json  lakefile.lean
formal/.lake/config/[anonymous]/: lakefile.olean  lakefile.olean.trace
formal/ACT/: Absolute.lean  Algebra.lean  Eternity.lean
formal/BalansisFormal/: AbsoluteValue.lean  Algebra.lean  Direction.lean  EternalRatio.lean
scripts/: check_changelog.py  generate_release_notes.py  validate_version.py
tests/: test_compensator.py  test_gemm.py  test_linalg_integration.py  test_numpy_integration.py  test_operations.py  test_optimizer.py  test_qr.py  test_svd.py
